# DeepCritical

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeepCritical_2.code-workspace  LICENSE  Makefile  README.md  bandit-report.json  mkdocs.local.yml  mkdocs.yml  pyproject.toml  pytest.ini  test_matrix_functionality.py  tox.ini
.github/: FUNDING.yml  README.md  SECURITY.md  dependabot.yml  pull_request_template.md  repository-settings.yml
DeepResearch/: __init__.py  agents.py  app.py  tools.py  vllm_agent_cli.py
configs/: bioinformatics_example.yaml  bioinformatics_example_configured.yaml  config.yaml  config_with_modes.yaml  deep_agent_integration.yaml  rag_example.yaml  sandbox.yaml  workflow_orchestration_example.yaml
docs/: index.md
tests/: test_agents_imports.py  test_datatypes_imports.py  test_imports.py  test_individual_file_imports.py  test_matrix_functionality.py  test_models.py  test_orchestrator.py  test_placeholder.py  test_prompts_agents_vllm.py  test_prompts_bioinformatics_agents_vllm.py  test_prompts_broken_ch_fixer_vllm.py  test_prompts_code_exec_vllm.py  test_prompts_code_sandbox_vllm.py  test_prompts_deep_agent_prompts_vllm.py  test_prompts_error_analyzer_vllm.py  test_prompts_evaluator_vllm.py  test_prompts_finalizer_vllm.py  test_prompts_imports.py  test_prompts_multi_agent_coordinator_vllm.py  test_prompts_orchestrator_vllm.py  test_prompts_planner_vllm.py  test_prompts_query_rewriter_vllm.py  test_prompts_rag_vllm.py  test_prompts_reducer_vllm.py  test_prompts_research_planner_vllm.py  tox.ini  (+7 more)
(+267 files in other folders)
