[project]
name = "deepcritical"
version = "0.1.0"
description = "Hydra-configured, Pydantic Graph-based deep research workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "DeepCritical", email = "noreply@example.com" }
]
dependencies = [
  "beautifulsoup4>=4.14.2",
  "gradio>=5.47.2",
  "hydra-core>=1.3.2",
  "limits>=5.6.0",
  "pydantic>=2.7",
  "pydantic-ai>=0.0.16",
  "pydantic-graph>=0.2.0",
  "python-dateutil>=2.9.0.post0",
  "testcontainers>=4.8.0",
  "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
deepresearch = "DeepResearch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["DeepResearch"]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "bandit>=1.7.0",
]


